<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MainMenuFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/colorGrey"
            android:orientation="horizontal"
            android:weightSum="82"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:fontFamily="@font/josefinsansregular"
                android:gravity="center"
                android:text="@string/monday"
                android:textSize="18dip" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:fontFamily="@font/josefinsansregular"
                android:gravity="center"
                android:text="@string/tuesday"
                android:textSize="18dip" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:fontFamily="@font/josefinsansregular"
                android:gravity="center"
                android:text="@string/wednesday"
                android:textSize="18dip" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:fontFamily="@font/josefinsansregular"
                android:gravity="center"
                android:text="@string/thursday"
                android:textSize="18dip" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:fontFamily="@font/josefinsansregular"
                android:gravity="center"
                android:text="@string/friday"
                android:textSize="18dip" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:fontFamily="@font/josefinsansregular"
                android:gravity="center"
                android:text="@string/saturday"
                android:textSize="18dip" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:fontFamily="@font/josefinsansregular"
                android:gravity="center"
                android:text="@string/sunday"
                android:textColor="@color/colorRed"
                android:textSize="18dip" />

        </LinearLayout>


        <androidx.viewpager.widget.ViewPager
            android:id="@+id/houses_view_pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>